--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <div id="clock-container">
         <div id="clock">00:00:00</div>
     </div>
+    <script src="index.js"></script>
   </body>
 </html>
